-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 10, 11, 14, 15
-
Component/s: hotspot
-
b10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8246665 | 13.0.4 | Roland Westrelin | P3 | Resolved | Fixed | b04 |
| JDK-8243384 | 11.0.8-oracle | Roland Westrelin | P3 | Resolved | Fixed | b04 |
| JDK-8242268 | 11.0.8 | Roland Westrelin | P3 | Resolved | Fixed | b01 |
# Internal Error (src/hotspot/share/opto/node.hpp:852), pid=1623963, tid=1623975
# assert(is_MachReturn()) failed: invalid node class
root cause is that GraphKit::must_be_not_null() is called with a known to be non null input. This causes the null branch of the test to be optimized to top and a top be added to the RootNode. RootNode::Ideal() is never called to clean the top inputs and the assert is hit during matching.
# assert(is_MachReturn()) failed: invalid node class
root cause is that GraphKit::must_be_not_null() is called with a known to be non null input. This causes the null branch of the test to be optimized to top and a top be added to the RootNode. RootNode::Ideal() is never called to clean the top inputs and the assert is hit during matching.
- backported by
-
JDK-8242268 assert(is_MachReturn()) running CTW with fix for JDK-8231291
-
- Resolved
-
-
JDK-8243384 assert(is_MachReturn()) running CTW with fix for JDK-8231291
-
- Resolved
-
-
JDK-8246665 assert(is_MachReturn()) running CTW with fix for JDK-8231291
-
- Resolved
-
- relates to
-
JDK-8176506 C2: loop unswitching and unsafe accesses cause crash
-
- Resolved
-
-
JDK-8231291 C2: loop opts before EA should maximally unroll loops
-
- Resolved
-