8237086: assert(is_MachReturn()) running CTW with fix for JDK-8231291

Reviewed-by: kvn, vlivanov